--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">AndroidTutorial</string>
     <string name="start_secondary">Start Secondary</string>
+    <string name="hello_world">Hello World</string>
+    <string name="click">Click</string>
+    <string name="hello">Hello</string>
+    <string name="registerforactivityresultexample">RegisterForActivityResultExample</string>
+    <string name="naigateexample">NaigateExample</string>
+    <string name="navigate_to_secondary_activity">Navigate to Secondary Activity</string>
+    <string name="navigate_to_third_activity">Navigate to Third Activity</string>
 </resources>
