--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,12 @@
     <string name="btn_navigate_to_single_top_flag">Button navigate to single top flag</string>
     <string name="senddatawithintent">SendDataWithIntent</string>
     <string name="send_data_with_bundle">Send data with bundle</string>
+    <string name="optimize_storage_get_space">Optimize Storage, Get Space</string>
+    <string name="_8_99_week"><strike><b>$8.99</b>/week</strike></string>
+    <string name="off_50">OFF 50%</string>
+    <string name="_3_99">$3.99</string>
+    <string name="week">/week</string>
+    <string name="claim_offer">CLAIM OFFER</string>
+    <string name="_3_99_for_first_week_then_8_99_next_week_n_billed_weekly_cancel_anytime">$3.99 for first week then $8.99 next week.\n Billed weekly, cancel anytime.</string>
+    <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies_n_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_n_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_n_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_n_subscription_is_not_required_to_use_v9compress">By continuing you agree to our Terms and Privacy policies.\n• Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n• Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n• You will not be charged if subscription is canceled before trial period ends.\n• Subscription is not required to use V9Compress.</string>
 </resources>
