--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="claim_offer">CLAIM OFFER</string>
     <string name="_3_99_for_first_week_then_8_99_next_week_n_billed_weekly_cancel_anytime">$3.99 for first week then $8.99 next week.\n Billed weekly, cancel anytime.</string>
     <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies_n_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_n_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_n_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_n_subscription_is_not_required_to_use_v9compress">By continuing you agree to our Terms and Privacy policies.\n• Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n• Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n• You will not be charged if subscription is canceled before trial period ends.\n• Subscription is not required to use V9Compress.</string>
+    <string name="faster_compress_made_simple">Faster Compress Made Simple</string>
+    <string name="_30percent">30%</string>
+    <string name="try_3_for_free_then_price_per_year_n_auto_renew_cancel_anytime">Try 3 for FREE then $[price] per year.\n Auto renew, cancel anytime.</string>
 </resources>
