--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,11 +47,31 @@
     <string name="shrink_size_keep_quality">SHRINK SIZE\nKEEP QUALITY</string>
     <string name="_14_99_year_after_free_trial_ends_auto_renew_cancel_anytime">$14.99/year after free trial ends.\nAuto renew, Cancel anytime</string>
     <string name="free_trial_enabled">Free trial enabled</string>
-    <string name="try_for_free">TRY FOR FREE</string>
+    <string name="try_for_free">Try for free</string>
     <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_subscription_is_not_required_to_use_v9compress">By continuing you agree to our Terms and Privacy policies.\nSubscription gives you access to V9Compress\'s premium features, all ads will be removed.\nSubscription plans are automatically renewed and can becanceled anytime in Subscriptions on Google Play.\nYou will not be charged if subscription is canceled before trial period ends.\nSubscription is not required to use V9Compress</string>
     <string name="continue1">CONTINUE</string>
     <string name="introductionYearlyEligible">$14.99/year after free trial ends.\nAuto renew, Cancel anytime</string>
     <string name="introductionWeeklyEligible">$4.99/week after free trial ends.\nAuto renew, Cancel anytime</string>
     <string name="introductionYearlyNotEligible">$14.99/year.\nAuto renew, Cancel anytime</string>
     <string name="introductionWeeklyNotEligible">$4.99/week.\nAuto renew, Cancel anytime</string>
+    <string name="high_quality_ncompression">high-quality\ncompression</string>
+    <string name="navigate_to_unlock_feature">Navigate to unlock feature</string>
+    <string name="navigate_to_yearly_subscription">Navigate to yearly subscription</string>
+    <string name="navigate_to_yearly_subscription_full_screen">Navigate to yearly subscription full screen</string>
+    <string name="smarter_storage_made_affordable">SMARTER STORAGE MADE\nAFFORDABLE</string>
+    <string name="saved_92">Saved 92%</string>
+    <string name="yearly_plan">Yearly Plan</string>
+    <string name="only_0_412_per_week">Only $0.412 per week</string>
+    <string name="_19_99">$19.99</string>
+    <string name="year">/year</string>
+    <string name="weekly_plan">Weekly Plan</string>
+    <string name="_4_99">$4.99</string>
+    <string name="_4_99_week_after_free_trial_ends_auto_renew_cancel_anytime">$4.99/week after free trial ends.\nAuto renew, cancel anytime</string>
+    <string name="_3_day_free_trial_enabled">3-day free trial enabled</string>
+    <string name="introduceSaleYearlyEligible">$19.99/year after free trial ends.\nAuto renew, cancel anytime</string>
+    <string name="introduceSaleWeeklyEligible">$4.99/week after free trial ends.\nAuto renew, cancel anytime</string>
+    <string name="introduceSaleYearlyNotEligible">Auto renew at $19.99/year</string>
+    <string name="introduceSaleWeeklyNotEligible">Auto renew at $4.99/week</string>
+
+
 </resources>
